# agent-compute-marketplace

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  __init__.py  app.db  docker-compose.metrics.yml  docker-compose.tracing.yml  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.md
.github/workflows/: ci.yml
agents/: buyer.py  negotiation_engine.py  seller.py
alembic/: env.py  script.py.mako
alembic/versions/: 07086b849fda_initial_schema_with_all_tables.py  0b320dc5805b_initial_migration.py  2f1dbf530d9b_create_transactions_table.py  634f04d91d4a_add_composite_index_on_transactions.py  6f2a078f4cc0_initial_migration.py  add_audit_logs.py  add_buyer_max_price.py  add_inventory_system.py  add_paid_status.py
api/: main.py  middleware.py  routes.py  schemas.py  webhooks.py
api/routes/: __init__.py  quotes.py  resources.py
core/: audit.py  dependencies.py  llm.py  llm_utils.py  logging.py  metrics.py  settings.py  sqlalchemy_logging.py  tracing.py
dashboard/: plot.py  streamlit_app.py
db/: __init__.py  models.py  seed.py  session.py
docs/: grafana-dashboard.json  prometheus.yml
negotiation/: __init__.py  engine.py  router.py
negotiation/prompts/: __init__.py  seller_system.txt
payments/: crypto.py  paypal.py  paypal_client.py  paypal_service.py  stripe.py  stripe_client.py  stripe_service.py
scripts/: cleanup_reservations.py  init_db.py  reset_demo.sh  setup.sh  start.sh
tests/: __init__.py  conftest.py  test_agents.py  test_audit.py  test_logging.py  test_metrics.py  test_negotiation.py  test_payments.py  test_paypal.py  test_quote.py  test_resources.py  test_smoke.py  test_stripe.py
